--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "prisma": "^5.20.0"
+    "prisma": "^5.20.0",
+    "stripe": "^17.2.1"
   }
 }
